refactor(js-docs): routing

--- a/src/app/component/js-docs/js-docs.component.sass
+++ b/src/app/component/js-docs/js-docs.component.sass
@@ -126,6 +126,7 @@ app-js-docs
           &::after
             content: '☰'
             position: absolute
+            top: 0
             right: 1rem
         > div
           position: absolute
