feat(js-docs): add session - add session - update md

--- a/src/app/component/js-docs/js-docs.component.html
+++ b/src/app/component/js-docs/js-docs.component.html
@@ -2,7 +2,7 @@
 <ng-container *ngIf="pocContent && tocContent && mocContent">
   <div class="wrap">
     <aside>
-      <label class="doc_title">{{ isMoblieDevice ? 'JavaScript Document' : 'Table of Contents' }} </label>
+      <label class="doc_title">JavaScript Document</label>
       <div  id="tocContent"
             markdown
             [src]="tocContent"
